Changed #overlay position to fixed and z-index to 1999.

--- a/DashboardX/assets/css/styles.css
+++ b/DashboardX/assets/css/styles.css
@@ -166,10 +166,10 @@ select {
     display: none;
     height: 100%;
     left: 0;
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
-    z-index: 2001;
+    z-index: 1999;
 }
     #overlay img {
         margin: auto;
